name:                tag-game
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Mihaly Barasz
maintainer:          Mihaly Barasz <klao@nilcons.com>
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
homepage:            https://github.com/nilcons/tag-game
synopsis:            Simple tag game using gloss
-- description:

source-repository head
  type: git
  location: https://github.com/nilcons/tag-game.git

executable tag-game
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:
    Keys,
    Player
  build-depends:
    base >=4.7 && <4.8,
    lens >=4.7 && <4.8,
    vector-space >=0.9 && <0.10,
    data-default >=0.5 && <0.6,
    containers >=0.5 && <0.6,
    gloss >=1.9 && <1.10,
    random
